openshift/gitlab/gitlab-buildconfig.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gitlab
    name: gitlab
  spec:
    dockerImageRepository: docker.io/gitlab/gitlab-ce
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gitlab
    name: gitlab
  spec:
    replicas: 1
    selector:
      app: gitlab
      deploymentconfig: gitlab
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: gitlab
          deploymentconfig: gitlab
      spec:
        containers:
        - image: docker.io/gitlab/gitlab-ce
          name: gitlab
          ports:
          - containerPort: 22
            protocol: TCP
          - containerPort: 80
            protocol: TCP
          - containerPort: 443
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /etc/gitlab
            name: gitlab-volume-1
          - mountPath: /var/log/gitlab
            name: gitlab-volume-2
          - mountPath: /var/opt/gitlab
            name: gitlab-volume-3
        securityContext:
          privileged: true
        volumes:
        - name: gitlab-volume-1
          persistentVolumeClaim:
            claimName: gitlab-etc
        - name: gitlab-volume-2
          persistentVolumeClaim:
            claimName: gitlab-log
        - name: gitlab-volume-3
          persistentVolumeClaim:
            claimName: gitlab-opt
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - gitlab
        from:
          kind: ImageStreamTag
          name: gitlab:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gitlab
    name: gitlab
  spec:
    ports:
    - name: 22-tcp
      port: 22
      protocol: TCP
      targetPort: 22
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    - name: 443-tcp
      port: 443
      protocol: TCP
      targetPort: 443
    selector:
      app: gitlab
      deploymentconfig: gitlab
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: gitlab
    name: gitlab-etc
  spec:
    accessModes:
    - ReadWriteOnce
    - ReadWriteMany
    resources:
      requests:
        storage: 5Gi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: gitlab
    name: gitlab-log
  spec:
    accessModes:
    - ReadWriteOnce
    - ReadWriteMany
    resources:
      requests:
        storage: 2Gi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: gitlab
    name: gitlab-opt
  spec:
    accessModes:
    - ReadWriteOnce
    - ReadWriteMany
    resources:
      requests:
        storage: 2Gi
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: gitlab
    name: gitlab
  spec:
    host: ""
    port:
      targetPort: 22-tcp
      targetPort: 80-tcp
      targetPort: 443-tcp
    to:
      name: sniffer-webapp
  status:
    ingress: null
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: gitlab
kind: List
metadata: {}
